--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.1",
+    "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
+    "postcss": "^8.3.6",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0"
   },
